--- a/scss/partials/_carInfo.scss
+++ b/scss/partials/_carInfo.scss
@@ -1,7 +1,10 @@
 #carInfo {
+    margin: 5rem auto;
+    font-family: 'Roboto', sans-serif;
+
     max-width: 1320px;
     display: grid;
-    grid-template-columns: 40% auto;
+    grid-template-columns: 40% 60%;
     grid-template-rows: 10% 80% auto;
     grid-template-areas:
         'carPicture carTitle'
@@ -10,21 +13,49 @@
 
     .carPicture {
         width: 100%;
-        grid-area: 'carPicture';
+        grid-area: carPicture;
     }
 
     .carTitle {
-        width: 100%;
-        grid-area: 'carTitle';
+        grid-area: carTitle;
+        text-align: center;
     }
 
     .carInfo {
-        grid-area: 'carInfo';
-        display: flex;
-        flex: row wrap;
+        grid-area: carInfo;
+
+        ol {
+            display: grid;
+            grid-template-rows: 1fr 1fr;
+            grid-template-columns: 1fr 1fr;
+            gap: 2rem;
+            grid-template-areas: 
+                'motor exterior'
+                'safety dimensions';
+
+            #motor {
+                grid-area: motor;
+            }
+            #exterior {
+                grid-area: exterior;
+            }
+            #safety {
+                grid-area: safety;
+            }
+            #dimensions {
+                grid-area: dimensions;
+            }
+
+            li{
+                // width: 500px;
+            }
+        }
     }
 
     .buttons {
-        grid-area: 'buttons';
+        margin: auto;
+        display: flex;
+        gap: 2rem;
+        grid-area: buttons;
     }
 }
