--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,127 @@
   grid-area: buttons;
 }
 
+#mainPageBody {
+  margin: auto;
+  max-width: 1920px;
+}
+#mainPageBody header {
+  width: 1920px;
+  position: absolute;
+  background-color: unset;
+}
+#mainPageBody header ul li.active, #mainPageBody header ul li:hover {
+  background-color: #353535;
+}
+#mainPageBody header ul li.active a, #mainPageBody header ul li:hover a {
+  color: #fff;
+}
+#mainPageBody #mainPageBanner img {
+  width: 100%;
+}
+#mainPageBody #catalogSection {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+  background: linear-gradient(#a8d7f5, #b9d3e0);
+}
+#mainPageBody #catalogSection .cardContainer {
+  max-width: 1532px;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+#mainPageBody #catalogSection .cardContainer .sectionCard {
+  color: #ffffff;
+  background: linear-gradient(#056399, #3b85b1);
+  width: 450px;
+  border-radius: 2rem;
+}
+#mainPageBody #catalogSection .cardContainer .sectionCard img {
+  width: 100%;
+  border-radius: 2rem 2rem 0 0;
+}
+#mainPageBody #catalogSection .cardContainer .sectionCard h3 {
+  font-size: 1.6rem;
+  margin-bottom: 0;
+  padding: 1.5rem 0;
+  text-align: center;
+}
+#mainPageBody #catalogSection .cardContainer .sectionCard p {
+  margin-bottom: 2rem;
+  text-align: center;
+  font-size: 1.15rem;
+  line-height: 1.5;
+  padding: 0 2rem;
+}
+#mainPageBody #partners {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+  background: linear-gradient(#004774, #00619e);
+  display: flex;
+  flex-direction: column;
+}
+#mainPageBody #partners h3 {
+  margin-bottom: 2rem;
+  font-size: 2.25rem;
+  text-align: center;
+  color: #a8d7f5;
+}
+#mainPageBody #partners #partnersLogos {
+  margin: 0 25rem;
+  display: flex;
+  justify-content: space-between;
+}
+#mainPageBody #partners #partnersLogos img {
+  border-radius: 50%;
+}
+#mainPageBody #companyContact {
+  background-color: #e2ecf1;
+}
+#mainPageBody #companyContact .contactCard {
+  max-width: 1532px;
+  margin: auto;
+  padding: 7rem 0;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+#mainPageBody #companyContact .contactCard img {
+  width: 725px;
+}
+#mainPageBody #companyContact .contactCard .cardText {
+  width: 725px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+#mainPageBody #companyContact .contactCard .cardText h3 {
+  font-size: 2rem;
+}
+#mainPageBody #companyContact .contactCard .cardText p {
+  font-size: 1.25rem;
+}
+#mainPageBody #companyContact .contactCard .cardText #contactFormBtn {
+  align-self: flex-end;
+  width: 15rem;
+  padding: 1rem;
+  background-color: #3b85b1;
+  color: #fff;
+  font-size: 1.5rem;
+  border: none;
+  border-radius: 2rem;
+}
+#mainPageBody footer {
+  padding: 1rem 5rem;
+  background-color: #000;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+}
+
 body {
+  margin: 0 auto;
+  max-width: 1920px;
   font-family: "Roboto", sans-serif;
 }
 body header {
@@ -61,7 +181,11 @@ body header {
   justify-content: space-between;
   align-items: center;
 }
-body header .logo h1 {
+body header .logo a {
+  color: #0b5ed7;
+  text-decoration: none;
+}
+body header .logo a h1 {
   margin: 0;
 }
 body header ul {
